# rust-aws-http-lambda-template

./: Cargo.toml  bootstrap
cloud-formation/: rust-lambda.yaml
scripts/: build-project.sh  create-deploy-bucket.sh  create-stack.sh  delete-stack.sh  deploy-stack.sh  update-stack.sh  zip-lambda.sh
src/: main-run-lambda.rs  main.rs
